5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1577_1332.log
== TEST (2019-03-21 18:30:35) 
-- CODE:
aresta =5
area = 3/2 3aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 3aresta**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:30:37) 
-- CODE:
aresta =5
area = 3/2 3aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.144011
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 3/2 3aresta**2
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:30:38) 
-- CODE:
aresta =5
area = 3/2 3aresta**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 3aresta**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:41) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:55) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:31:56) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area, 4))
-- EXECUTION TIME:
0.182805
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
